// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Faker SchemaGenerator > 'enumNames' 1`] = `
"export function enumNames(): NonNullable<EnumNames> {
  return undefined
}
"
`;

exports[`Faker SchemaGenerator > 'enumVarNames' 1`] = `
"export function enumVarNames(): NonNullable<EnumVarNames> {
  return undefined
}
"
`;
